--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
   <groupId>org.ow2.easycommons</groupId>
   <artifactId>easycommons-util</artifactId>
-  <version>2.6.1</version>
+  <version>2.6.1-alfa1001</version>
   <packaging>jar</packaging>
 
   <properties>
